# stac-vrt

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  expected.vrt  pyproject.toml  stac_vrt.py  test_stac_vrt.py  vrstac.py
.github/workflows/: ci.yaml
docs/: api.md  conf.py  index.md
tests/: Untitled.ipynb  response-fixed.json  response.json  test_stac_vrt.py
